fix search bar visibility

--- a/styles/express-checkout.scss
+++ b/styles/express-checkout.scss
@@ -63,7 +63,7 @@ $sticky-checkout-padding: 20px;
   transition: 0.3s ease;
   transition-property: all;
   will-change: transform, opacity;
-  z-index: 99999;
+  z-index: 1001;
   width: 100%;
   height: 70vh;
   background-color: white;
